--- a/disaster-dashboard/src/style.css
+++ b/disaster-dashboard/src/style.css
@@ -38,7 +38,7 @@ button {
   color: white;
   font-weight: bold;
   cursor: pointer;
-  width:90%;
+  width:auto;
   padding: 5px 0;
   font-size: 16px;
   margin-bottom:15px;
