--- a/disaster-dashboard/src/style.css
+++ b/disaster-dashboard/src/style.css
@@ -39,8 +39,9 @@ button {
   font-weight: bold;
   cursor: pointer;
   width:auto;
-  padding: 5px 0;
+  padding: 10px 20px;
   font-size: 16px;
+  display: flex;
   margin-bottom:15px;
   margin-top:10px;
   border: 1px solid black;
