--- a/disaster-dashboard/src/style.css
+++ b/disaster-dashboard/src/style.css
@@ -95,8 +95,9 @@ button {
   text-decoration: none;
   font-weight: bold;
   color: #2c3e50;
-  border: 1px solid black;
+  border: 3px solid black;
   border-radius: 4px;
+  pading:2px 4px;
 }
 
 .navbar a:hover {
