--- a/disaster-dashboard/src/style.css
+++ b/disaster-dashboard/src/style.css
@@ -97,7 +97,7 @@ button {
   color: #2c3e50;
   border: 3px solid black;
   border-radius: 4px;
-  pading:2px 4px;
+  padding:2px 4px;
 }
 
 .navbar a:hover {
